force-app/main/default/objects/Product2/fields/Automatic_type__c.field-meta.xml
<CustomField>
    <fullName>Automatic_type__c</fullName>
    <label>Automatic type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full automatic</fullName>
            </value>
            <value>
                <fullName>Semi automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>