force-app/main/default/objects/Product2/fields/Available_units__c.field-meta.xml
<CustomField>
    <fullName>Available_units__c</fullName>
    <label>Available units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>