force-app/main/default/objects/Product2/fields/brand_name__c.field-meta.xml
<CustomField>
    <fullName>brand_name__c</fullName>
    <label>brand name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Haier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>