force-app/main/default/objects/Product2/fields/capacity_in_kgs__c.field-meta.xml
<CustomField>
    <fullName>capacity_in_kgs__c</fullName>
    <label>capacity in kgs</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>