force-app/main/default/objects/Product2/fields/capacity_tons__c.field-meta.xml
<CustomField>
    <fullName>capacity_tons__c</fullName>
    <label>capacity (tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>