force-app/main/default/objects/Product2/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <label>model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>brand_name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC001</fullName>
            </value>
            <value>
                <fullName>SAC002</fullName>
            </value>
            <value>
                <fullName>SAC003</fullName>
            </value>
            <value>
                <fullName>LAC001</fullName>
            </value>
            <value>
                <fullName>LAC002</fullName>
            </value>
            <value>
                <fullName>LAC003</fullName>
            </value>
            <value>
                <fullName>HAC001</fullName>
            </value>
            <value>
                <fullName>HAC002</fullName>
            </value>
            <value>
                <fullName>HAC003</fullName>
            </value>
            <value>
                <fullName>STV001</fullName>
            </value>
            <value>
                <fullName>STV002</fullName>
            </value>
            <value>
                <fullName>STV003</fullName>
            </value>
            <value>
                <fullName>LTV001</fullName>
            </value>
            <value>
                <fullName>LTV002</fullName>
            </value>
            <value>
                <fullName>LTV003</fullName>
            </value>
            <value>
                <fullName>HTV001</fullName>
            </value>
            <value>
                <fullName>HTV002</fullName>
            </value>
            <value>
                <fullName>HTV003</fullName>
            </value>
            <value>
                <fullName>SWM001</fullName>
            </value>
            <value>
                <fullName>SWM002</fullName>
            </value>
            <value>
                <fullName>SWM003</fullName>
            </value>
            <value>
                <fullName>LWM001</fullName>
            </value>
            <value>
                <fullName>LWM002</fullName>
            </value>
            <value>
                <fullName>LWM003</fullName>
            </value>
            <value>
                <fullName>HWM001</fullName>
            </value>
            <value>
                <fullName>HWM002</fullName>
            </value>
            <value>
                <fullName>HWM003</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>