force-app/main/default/objects/Product2/fields/product_ID__c.field-meta.xml
<CustomField>
    <fullName>product_ID__c</fullName>
    <displayFormat>PID-{0000}</displayFormat>
    <label>product ID</label>
    <type>AutoNumber</type>
</CustomField>