force-app/main/default/objects/Product2/fields/product_type__c.field-meta.xml
<CustomField>
    <fullName>product_type__c</fullName>
    <label>product type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>model__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>split</fullName>
            </value>
            <value>
                <fullName>window</fullName>
            </value>
            <value>
                <fullName>LCD</fullName>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>Front load</fullName>
            </value>
            <value>
                <fullName>Top load</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>