force-app/main/default/objects/Product2/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>new</fullName>
                <default>true</default>
                <label>new</label>
            </value>
            <value>
                <fullName>awaiting approval</fullName>
            </value>
            <value>
                <fullName>Ready for sale</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>