force-app/main/default/objects/Product2/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>