force-app/main/default/objects/Product2/fields/TotalQuantities__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantities__c</fullName>
    <label>TotalQuantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>