force-app/main/default/objects/Product2/fields/warrenty_period__c.field-meta.xml
<CustomField>
    <fullName>warrenty_period__c</fullName>
    <label>warrenty period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>