force-app/main/default/objects/Product2/recordTypes/tv_products.recordType-meta.xml
<RecordType>
    <fullName>tv_products</fullName>
    <active>true</active>
    <label>tv products</label>
</RecordType>