force-app/main/default/objects/Product2/recordTypes/waching_machine.recordType-meta.xml
<RecordType>
    <fullName>waching_machine</fullName>
    <active>true</active>
    <label>waching machine</label>
</RecordType>