force-app/main/default/objects/Product2/validationRules/price_should_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>price_should_not_be_null</fullName>
    <active>true</active>
    <description>shows error if the price field is  zero</description>
    <errorConditionFormula>Price__c  = 0</errorConditionFormula>
    <errorMessage>price value cannot be zero</errorMessage>
</ValidationRule>